# MediaDatabaseGUI

./: .gitignore  CMakeLists.txt  main.cpp
assets/: captions.txt  settings.txt
